--- a/styles/globals.css
+++ b/styles/globals.css
@@ -319,12 +319,6 @@ p {
     line-height: 31px;
 }
 
-.description p {
-    margin: 0;
-    font-size: 10px;
-    text-decoration: none;
-}
-
 .description button {
     margin: 10px 0;
 }
@@ -356,8 +350,48 @@ p.title {
     filter: drop-shadow(10px 20px 15px rgba(0, 0, 0, 0.5));
 }
 
+.example p {
+    margin: 0;
+    font-size: 10px;
+    text-decoration: none;
+}
+
 .example button {
     margin: 5px 0;
+}
+
+.buttons {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttons .btn{
+    margin: 0;;
+}
+
+.buttons .btn:has(img){
+    position: absolute;
+    right: 10%;
+    border: none;
+    background-color: transparent;
+    width: 10%;
+    padding: 0;
+}
+
+.buttons img{
+    border: none;
+    border-radius: 0;
+}
+
+img#notSaved,#saved{
+    width: 100%;
+}
+
+img#saved{
+    display: none;
+    color: red;
 }
 
 p.name {
@@ -402,10 +436,36 @@ p.specs {
         font-size: 20px;
     }
 
-    .example button {}
-
     .example img {
         width: 100%;
+    }
+
+    .buttons {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .buttons .btn:has(img){
+        border: none;
+        background-color: transparent;
+        width: 10%;
+        padding: 0;
+    }
+    
+    .buttons img{
+        border: none;
+        border-radius: 0;
+    }
+    
+    img#notSaved,#saved{
+        width: 100%;
+    }
+    
+    img#saved{
+        display: none;
+        color: red;
     }
 
     p.name {
@@ -480,7 +540,7 @@ time {
     filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
 }
 
-.social_btn:hover{
+.social_btn:hover {
     background-color: var(--background2);
     transform: scale(1.05);
 }
@@ -578,6 +638,7 @@ time {
     margin: 10px 0;
     display: grid;
     height: auto;
+    min-height: 150px;
     border-radius: 40px;
     border-style: groove;
     border-color: var(--border-color);
@@ -588,7 +649,13 @@ time {
 }
 
 .userInfo p {
-    font-size: 35px;
+    font-size: 20px;
+}
+
+@media (min-width: 900px){
+    .userInfo p {
+        font-size: 35px;
+    }
 }
 
 .otherInfo {
@@ -605,7 +672,8 @@ time {
     filter: drop-shadow(5px 10px 8px rgba(0, 0, 0, 0.5));
 }
 
-.cars, .users {
+.cars,
+.users {
     display: grid;
     justify-items: center;
     gap: 10px
@@ -620,7 +688,7 @@ time {
     justify-content: center;
 }
 
-.manage div{
+.manage div {
     width: auto;
 }
 
